--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caneli - Premium Serverracks</title>
+    <title>careli - Premium Serverracks</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -310,8 +310,8 @@
 <body>
 
 <header>
-    <img src="bilder/logo.png" alt="Caneli Logo" width="150px">
-    <h1>CANELI</h1>
+    <img src="bilder/logo.png" alt="careli Logo" width="150px">
+    <h1>careli</h1>
     <p>Premium Serverracks - Modern. Sicher. Innovativ.</p>
 </header>
 
@@ -387,7 +387,7 @@
         <h2>Über Uns</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>Caneli steht für hochwertige Sicherheits-Servertechnik aus Deutschland. Mit modernster Produktion, nachhaltigen Prozessen und innovativen Designs beliefern wir den deutschen und europäischen Markt mit Premium-Serverracks.</p>
+                <p>careli steht für hochwertige Sicherheits-Servertechnik aus Deutschland. Mit modernster Produktion, nachhaltigen Prozessen und innovativen Designs beliefern wir den deutschen und europäischen Markt mit Premium-Serverracks.</p>
                 <p>Unsere Expertise in der Entwicklung maßgeschneiderter Serverlösungen macht uns zum idealen Partner für Unternehmen jeder Größe, die Wert auf Qualität und Zuverlässigkeit legen.</p>
                 <div class="certifications">
                     <span class="cert-badge">ISO 9001</span>
@@ -404,7 +404,7 @@
             <div class="contact-info">
                 <p><strong>Adresse:</strong> Technologiepark 12, 52074 Aachen</p>
                 <p><strong>Telefon:</strong> +49 (0) 241 / 123456-0</p>
-                <p><strong>E-Mail:</strong> <a href="mailto:info@caneli.de">info@caneli.de</a></p>
+                <p><strong>E-Mail:</strong> <a href="mailto:info@careli.de">info@careli.de</a></p>
             </div>
             <div class="contact-form">
                 <input type="text" placeholder="Name" class="form-input">
@@ -419,7 +419,7 @@
 <div class="footer">
     <div class="footer-content">
         <div class="footer-section">
-            <h3>Caneli</h3>
+            <h3>careli</h3>
             <p>Ihr Partner für hochwertige Serverinfrastruktur und maßgeschneiderte IT-Lösungen.</p>
         </div>
         <div class="footer-section">
@@ -441,7 +441,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>&copy; 2025 Caneli - Alle Rechte vorbehalten</p>
+        <p>&copy; 2025 careli - Alle Rechte vorbehalten</p>
     </div>
 </div>
 
