--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 <header>
     <img src="bilder/logo.png" alt="careli Logo" width="150px">
-    <h1>careli</h1>
+    <h1>CARELI</h1>
     <p>Premium Serverracks - Modern. Sicher. Innovativ.</p>
 </header>
 
@@ -387,7 +387,7 @@
         <h2>Über Uns</h2>
         <div class="about-content">
             <div class="about-text">
-                <p>careli steht für hochwertige Sicherheits-Servertechnik aus Deutschland. Mit modernster Produktion, nachhaltigen Prozessen und innovativen Designs beliefern wir den deutschen und europäischen Markt mit Premium-Serverracks.</p>
+                <p>Careli steht für hochwertige Sicherheits-Servertechnik aus Deutschland. Mit modernster Produktion, nachhaltigen Prozessen und innovativen Designs beliefern wir den deutschen und europäischen Markt mit Premium-Serverracks.</p>
                 <p>Unsere Expertise in der Entwicklung maßgeschneiderter Serverlösungen macht uns zum idealen Partner für Unternehmen jeder Größe, die Wert auf Qualität und Zuverlässigkeit legen.</p>
                 <div class="certifications">
                     <span class="cert-badge">ISO 9001</span>
