--- a/index.html
+++ b/index.html
@@ -477,6 +477,9 @@
     <div class="copyright">
         <p>&copy; 2025 careli - Alle Rechte vorbehalten</p>
     </div>
+    <div style="text-align:center; margin: 15px 0 25px 0;">
+        <a href="https://cloud.playcraftex.net/s/DkHnbrDZFwSqNmc" target="_blank" style="display:inline-block;padding:10px 28px;background:var(--turquoise,#00b8c4);color:#fff;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:background 0.2s;">ABG</a>
+    </div>
 </div>
 
 </body>
